2007-01-18  Akim Demaille  <demaille@gostai.com>

	Use string literals in the parser
	* src/parser/bison/ugrammar.y: here.

2007-01-18  Akim Demaille  <demaille@gostai.com>

	to_string for Status
	* src/ucommand.hh, src/ucommand.cc (KIND): Rename as...
        (CASE): this.
        (to_string): New.
        (UCommand::print): Use it to display the status.
        (UCommand_NOOP::print): No longer display the status.

2007-01-18  Akim Demaille  <demaille@gostai.com>

	Use std::string for file names
	* src/parser/uparser.hh, src/parser/uparser.cc
        (UParser::process): Take a string.
	* src/uexpression.cc: Adjust.

2007-01-18  Akim Demaille  <demaille@gostai.com>

	White space changes
	* src/ucommand.hh: here.

2007-01-18  Akim Demaille  <demaille@gostai.com>

	eval_FUNCTION_EXEC_OR_LOAD
	* src/uexpression.hh, src/uexpression.cc
        (UExpression::eval_FUNCTION_EXEC_OR_LOAD): New.
        Use it.

2007-01-18  Akim Demaille  <demaille@gostai.com>

	Scope reduction
	* src/uexpression.cc (UExpression::eval_FUNCTION): here.

2007-01-18  Akim Demaille  <demaille@gostai.com>

	Fix vdebug use
	* src/ucommand.hh, src/ucommand.cc (send_error): Rename the va_list
	one as...
	(vsend_error): this.
	Call va_end.
	(tab, debug, vdebug): Move to...
	* src/userver.hh, src/userver.cc: here.
	Fix a genuine bug: be sure to call UServer::vdebug, not debug.
	Use where appropriate.
	* src/uexpression.hh, src/uexpression.cc (UExpression::print): Now
	takes an indentation level.
	* src/unamedparameters.cc: Adjust.

2007-01-18  Akim Demaille  <demaille@gostai.com>

	Sanitize casts
	They trigger warnings.
	* src/parser/uparser.cc, src/parser/uparser.hh (process): Take
	a const ubyte*, not a ubyte*.
	* src/uexpression.cc: Adjust.

2007-01-18  Akim Demaille  <demaille@gostai.com>

	Address cast warning
	* src/uvalue.cc: Use a reinterpret_cast, not a C cast.

2007-01-18  Akim Demaille  <demaille@gostai.com>

	Fix creation of groups
	Fixes groups.chk.